--- a/animated-gradient.css
+++ b/animated-gradient.css
@@ -1,5 +1,5 @@
 :root {
-    --gradient: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
+    --gradient: linear-gradient(45deg,#f37130, #F8F5ED, #164F3B , #7CAFDE,#F6B52D);
   }
 
   .hero {
