--- a/stroke-shadow.css
+++ b/stroke-shadow.css
@@ -1,4 +1,4 @@
-.stroke {
+/* .stroke {
     -webkit-text-stroke-width: 2px;
     -moz-text-stroke-width: 2px;
     -webkit-text-stroke-color: #111827;
@@ -44,4 +44,4 @@
     background-color: #db2777;
   }
   
-  
+   */
