--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700;800&display=swap');
+/* @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('make-something-fly.css');
 @import url('animated-gradient.css');
 @import url('xtext-stroke.css');
@@ -59,8 +59,8 @@ html {
   --hyperlink-color: #333;
   --hyperlink-alternate-color: orangered;
   --hover-color: #111;
-  --body-typeface: "Inter", sans-serif;
-  --heading-typeface: "Montserrat", sans-serif;
+  --body-typeface: "Montserrat", sans-serif;
+  --heading-typeface: "Montserrat Alternates", sans-serif;
   --off-white: #f8f8ff;
   --isabelline: #f4f0ec;
   --baby-powder: #fefefa;
